# Eurovision_TDS

./: .gitignore  README.md  data.ipynb  eurovision.ipynb  pyproject.toml  requirements-M1-python310.txt  requirements.txt  xgboost.ipynb  xgboost_functions.py
data/: all_covariates.csv  country_codes.xlsx  country_codes_dict.pickle  df_2023.csv  eurovision-lyrics-2022-Gender.csv  eurovision_2023.csv  eurovision_languages_categories.csv  eurovision_merged_covariates_03Feb.csv  eurovision_merged_covariates_27Jan.csv  eurovision_voting_scores_1975_2019.xlsx  migration.csv  pop_sizes.csv  top_relationships.csv
docs/: index.html
eurovision/: alpha_exploration.ipynb  comp_sim_analysis.ipynb  data_viz.ipynb  distributions.ipynb  gender.ipynb  genderguess.py  get_comps_without_win.py  get_future_performers.py  get_gender.py  get_migration.ipynb  get_voting_scores.py  lambda_fit_test.ipynb  language_visualistaions.ipynb  languagematch.py  map_plots.py  model_1 _norm.ipynb  model_1.ipynb  model_2_hurdle.ipynb  model_3_voter_bias.ipynb  model_3_voter_bias_vector.ipynb  model_3_voter_bias_vector_2023_preds.ipynb  model_4_hurdle_voter_bias.ipynb  model_analysis.ipynb  model_rank_analysis.ipynb  model_vote_analysis.ipynb  plot_who_likes_who.R  prep_who_likes_who.ipynb  process_predictions.ipynb  relationship_plot.R  scatter_plot.ipynb  test.py
eurovision/data/: final_voting_data_long.xlsx
eurovision/generated_objects/: itovp.json  voterforp.json  vptoi.json
eurovision/model_fitting_scripts/: 2023_comp_simulation.py  model_3_voter_bias_vector.py  (+1 more)
(+12 files in other folders)
