[tool.poetry]
name = "eurovision"
version = "0.1.0"
description = ""
authors = ["joseph-palmer <22678593+joseph-palmer@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.2"
requests = "^2.28.2"
ipykernel = "^6.20.2"
wikipeople = "^0.4"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
scipy = "^1.10.0"
pycountry = "^22.3.5"
openpyxl = "^3.1.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
